Enrich documents with identity info
Add owner and department display data to Document API responses by integrating with the internal Identity service. Introduces IdentityDirectoryClient and record types (DirectoryRecord, DepartmentRecord), and updates DocumentController to batch-fetch users and departments, enrich DocumentDTOs, and fall back to single lookups when needed. DocumentDTO and DocumentMapper updated to carry/ignore new fields (ownerName, departmentName). Added identity service config properties to application.properties/dev. Implemented internal endpoints and bulk endpoints in the identity service (GET /internal/users/{id}, POST /internal/users/bulk, GET /internal/departments/{id}, POST /internal/departments/bulk) and corresponding service functions to support the client. Also removed @Lob from Document.content and adjusted docker-compose port mappings for the document/identity services. Build artifacts and generated sources updated accordingly.